Added cart page basic example

--- a/Y13TPIWebproject/Pages/Stationary.cshtml
+++ b/Y13TPIWebproject/Pages/Stationary.cshtml
@@ -11,67 +11,67 @@
                                 <h1 class="slogan2">Quality and Affordable Stationery</h1>
                             </div>
                                 <div class="row container-xl">
-                                            <div class="card col-auto">
+                                            <div class="pcard col-auto">
                                               <img src="https://img.alicdn.com/imgextra/i2/3159614613/O1CN01TIWdYy1jwnhDTZQF0_!!3159614613.jpg" alt="Deli Gel Pen" style="width:100%; height: 520px;">
                                               <h1>Deli <br />Gel Pen</h1>
-                                              <p class="price">$8.99</p>
+                                              <p class="graytext">$8.99</p>
                                               <p>12 pack, 9g product weight, 0.5mm tip, 400m writing length</p>
                                               <p><button>Add to Cart</button></p>
                                             </div>
 
-                                            <div class="card col-auto">
+                                            <div class="pcard col-auto">
                                               <img src="https://img.alicdn.com/imgextra/i3/2580300796/O1CN01VrG1ME1Hkc0HVti06_!!2580300796.jpg" alt="Chenguang 2B Pencls" style="width:100%; height: 260px;">
                                               <img src="https://img.alicdn.com/imgextra/i3/2580300796/O1CN01XuOnBU1Hkc0FrKC7O_!!2580300796.jpg" alt="Chenguang 2B Pencls" style="width:100%; height: 260px;">
                                               <h1>M&G <br /> 2B Pencil<br /></h1>
-                                              <p class="price">$19.99</p>
+                                              <p class="graytext">$19.99</p>
                                               <p>50 pack, 2B, Organic wood, hexagon shape, container</p>
                                               <p><button>Add to Cart</button></p>
                                             </div>
                                      
-                                            <div class="card col-auto">
+                                            <div class="pcard col-auto">
                                               <img src="https://img.alicdn.com/imgextra/i1/2416831481/O1CN01kdFJCT1MoLFInXHxs_!!2416831481.jpg" alt="Auto Pencil sharpener" style="width:100%; height: 520px;">
                                               <h1>Auto Pencil Sharpener</h1>
-                                              <p class="price">$39.99</p>
+                                              <p class="graytext">$39.99</p>
                                               <p>3 second sharpen, adjustable size, recharging, 3000 sharpens</p>
                                               <p><button>Add to Cart</button></p>
                                             </div>
                                                
-                                            <div class="card col-auto">
+                                            <div class="pcard col-auto">
                                               <img src="https://img.alicdn.com/imgextra/i2/2361728716/O1CN01u06Q7f2EFyqEMPPyI_!!2361728716.jpg" alt="Deli Retractable" style="width:100%; height: 520px;">
                                               <h1>Retractable Gel Pen</h1>
-                                              <p class="price">$8.99</p>
+                                              <p class="graytext">$8.99</p>
                                               <p>12 pack, 0.5mm, 3 colours, retractable<br /><br /></p>
                                               <p><button>Add to Cart</button></p>
                                             </div>
 
-                                            <div class="card col-auto">
+                                            <div class="pcard col-auto">
                                               <img src="https://img.alicdn.com/imgextra/i2/3039970645/O1CN01OPFC5B1GdSAcvG7uY_!!3039970645.jpg" alt="File" style="width:100%; height: 520px;">
                                               <h1>A4 Clear Files<br />w/Button</h1>
-                                              <p class="price">$9.99</p>
+                                              <p class="graytext">$9.99</p>
                                               <p>A4 size, multiple colours, button<br /><br /></p>
                                               <p><button>Add to Cart</button></p>
                                             </div>
                                      
-                                            <div class="card col-auto">
+                                            <div class="pcard col-auto">
                                               <img src="https://img.alicdn.com/imgextra/i4/2201271635443/O1CN01pEyOfY1q4wLe1goMC_!!2201271635443.jpg" alt="Note book" style="width:100%; height:520px;">
                                               <h1>Magnetic Notebook</h1>
-                                              <p class="price">$4.99</p>
+                                              <p class="graytext">$4.99</p>
                                               <p>A5 size, 240 pages, magnetic strap, ruled lines</p>
                                               <p><button>Add to Cart</button></p>
                                             </div>
                                             
-                                            <div class="card col-auto">
+                                            <div class="pcard col-auto">
                                               <img src="https://img.alicdn.com/imgextra/i2/2580300796/O1CN01ghIkxa1HkbyQkLXCk_!!2580300796.jpg" alt="Rubbers" style="width:100%; height: 520px;">
                                               <h1>M&G <br /> Erasers</h1>
-                                              <p class="price">$6.99 - $19.99</p>
+                                              <p class="graytext">$6.99 - $19.99</p>
                                               <p>4B/2B, variety of pattens, 18,20,30,32 etc packs</p>
                                               <p><button>Add to Cart</button></p>
                                             </div>
 
-                                            <div class="card col-auto">
+                                            <div class="pcard col-auto">
                                               <img src="https://img.alicdn.com/imgextra/i2/2579937287/O1CN01rbdaBq23hUi8XQc9C_!!2579937287.jpg" alt="Glue sticks" style="width:100%; height: 520px;">
                                               <h1>Deli Glue Sticks</h1>
-                                              <p class="price">$9.99</p>
+                                              <p class="graytext">$9.99</p>
                                               <p>12 pack,  21g/36g, PVA/PVP material<br /><br /></p>
                                               <p><button>Add to Cart</button></p>
                                             </div>
