--- a/Y13TPIWebproject/Pages/Cart.cshtml
+++ b/Y13TPIWebproject/Pages/Cart.cshtml
@@ -2,3 +2,75 @@
 @model Y13TPIWebproject.Pages.Index1Model
 @{
 }
+
+
+ 
+<html class="mainpagecart">
+    <div class="mainpagecart p-lg-4">
+          <div class="container">
+            <div class="row d-flex justify-content-center align-items-center">
+              <div class="col">
+                <p><span class="h2">Shopping Cart </span><span class="h4">(1 item in cart)</span></p>
+
+                <div class="card mb-4">
+                  <div class="card-body p-4">
+
+                    <div class="row align-items-center">
+                      <div class="col-md-2">
+                        <img src="https://img.alicdn.com/imgextra/i2/122109916/O1CN01ZA9t9T2N7a04jK1S4_!!122109916.jpg" class="img-fluid" alt="6x6 car">
+                      </div>
+                      <div class="col-md-2 d-flex justify-content-center">
+                        <div>
+                          <p class="small text-muted mb-4 pb-2">Item Name</p>
+                          <p class="lead fw-normal mb-0">1/28 Model Car</p>
+                        </div>
+                      </div>
+                      <div class="col-md-2 d-flex justify-content-center">
+                        <div>
+                          <p class="small text-muted mb-4 pb-2">Quantity</p>
+                          <p class="lead fw-normal mb-0">2</p>
+                        </div>
+                      </div>
+                      <div class="col-md-2 d-flex justify-content-center">
+                        <div>
+                          <p class="small text-muted mb-4 pb-2">Price</p>
+                          <p class="lead fw-normal mb-0">$19.99</p>
+                        </div>
+                      </div>
+                      <div class="col-md-2 d-flex justify-content-center">
+                        <div>
+                          <p class="small text-muted mb-4 pb-2">Total</p>
+                          <p class="lead fw-normal mb-0">$39.98</p>
+                        </div>
+                      </div>
+                      <div class="col-md-2 d-flex justify-content-center">
+                        <div>
+                          <p class="small mb-4 pb-2 text-danger">Remove From Cart</p>
+                        </div>
+                      </div>
+                    </div>
+
+                  </div>
+                </div>
+
+                <div class="card mb-5">
+                  <div class="card-body p-4">
+
+                    <div class="float-end">
+                      <p class="mb-0 me-5 d-flex align-items-center">
+                        <span class="small text-muted me-2">Final total:</span> <span class="lead fw-normal">$39.98</span>
+                      </p>
+                    </div>
+
+                  </div>
+                </div>
+
+                <div class="d-flex justify-content-end">
+                  <button type="button" class="btn btn-primary btn-lg">Checkout</button>
+                </div>
+
+              </div>
+            </div>
+          </div>
+    </div>
+</html>
