--- a/Y13TPIWebproject/Pages/Shared/_Layout.cshtml
+++ b/Y13TPIWebproject/Pages/Shared/_Layout.cshtml
@@ -34,6 +34,7 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Cart">Cart</a>
                         </li>
+                        <partial name="_LoginPartial.cshtml"/>
                     </ul>
                 </div>
             </div>
