Changed Stationary (mg erasers)

--- a/Y13TPIWebproject/Pages/Stationary.cshtml
+++ b/Y13TPIWebproject/Pages/Stationary.cshtml
@@ -64,13 +64,13 @@
                                               <img src="https://img.alicdn.com/imgextra/i2/2580300796/O1CN01ghIkxa1HkbyQkLXCk_!!2580300796.jpg" alt="Rubbers" style="width:100%; height: 520px;">
                                               <h1>M&G <br /> Erasers</h1>
                                               <p class="graytext">$6.99 - $19.99</p>
-                                              <p>4B/2B, variety of pattens, 18,20,30,32 etc packs</p>
+                                              <p>4B/2B, variety of pattens, 8,16,32 etc packs</p>
                                               <p><button>Add to Cart</button></p>
                                             </div>
 
                                             <div class="pcard col-auto">
                                               <img src="https://img.alicdn.com/imgextra/i2/2579937287/O1CN01rbdaBq23hUi8XQc9C_!!2579937287.jpg" alt="Glue sticks" style="width:100%; height: 520px;">
-                                              <h1>Deli Glue Sticks</h1>
+                                              <h1>Deli <br /> Glue Sticks</h1>
                                               <p class="graytext">$9.99</p>
                                               <p>12 pack,  21g/36g, PVA/PVP material<br /><br /></p>
                                               <p><button>Add to Cart</button></p>
