--- a/Y13TPIWebproject/Pages/Customers/Delete.cshtml
+++ b/Y13TPIWebproject/Pages/Customers/Delete.cshtml
@@ -37,10 +37,28 @@
             @Html.DisplayFor(model => model.Customer.Email)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Customer.AddressID)
+            @Html.DisplayNameFor(model => model.Customer.StreetNumber)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Customer.AddressID)
+            @Html.DisplayFor(model => model.Customer.StreetNumber)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Customer.StreetName)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Customer.StreetName)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Customer.Surburb)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Customer.Surburb)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Customer.City)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Customer.City)
         </dd>
     </dl>
     
