--- a/Y13TPIWebproject/Pages/Customers/Create.cshtml
+++ b/Y13TPIWebproject/Pages/Customers/Create.cshtml
@@ -34,9 +34,24 @@
                 <span asp-validation-for="Customer.Email" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Customer.AddressID" class="control-label"></label>
-                <input asp-for="Customer.AddressID" class="form-control" />
-                <span asp-validation-for="Customer.AddressID" class="text-danger"></span>
+                <label asp-for="Customer.StreetNumber" class="control-label"></label>
+                <input asp-for="Customer.StreetNumber" class="form-control" />
+                <span asp-validation-for="Customer.StreetNumber" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Customer.StreetName" class="control-label"></label>
+                <input asp-for="Customer.StreetName" class="form-control" />
+                <span asp-validation-for="Customer.StreetName" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Customer.Surburb" class="control-label"></label>
+                <input asp-for="Customer.Surburb" class="form-control" />
+                <span asp-validation-for="Customer.Surburb" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Customer.City" class="control-label"></label>
+                <input asp-for="Customer.City" class="form-control" />
+                <span asp-validation-for="Customer.City" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
