--- a/Y13TPIWebproject/Pages/Customers/Index.cshtml
+++ b/Y13TPIWebproject/Pages/Customers/Index.cshtml
@@ -26,7 +26,16 @@
                 @Html.DisplayNameFor(model => model.Customer[0].Email)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Customer[0].AddressID)
+                @Html.DisplayNameFor(model => model.Customer[0].StreetNumber)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Customer[0].StreetName)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Customer[0].Surburb)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Customer[0].City)
             </th>
             <th></th>
         </tr>
@@ -47,7 +56,16 @@
                 @Html.DisplayFor(modelItem => item.Email)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.AddressID)
+                @Html.DisplayFor(modelItem => item.StreetNumber)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.StreetName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Surburb)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.City)
             </td>
             <td>
                 <a asp-page="./Edit" asp-route-id="@item.CustomerID">Edit</a> |
