--- a/Y13TPIWebproject/Pages/Shared/_Layout.cshtml
+++ b/Y13TPIWebproject/Pages/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Toys">Toys</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Cart">Cart</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Orders/Create">Cart</a>
                         </li>
                         <partial name="_LoginPartial.cshtml"/>
                     </ul>
