--- a/Y13TPIWebproject/Pages/Orders/Delete.cshtml
+++ b/Y13TPIWebproject/Pages/Orders/Delete.cshtml
@@ -19,6 +19,12 @@
             @Html.DisplayFor(model => model.Order.ProductID)
         </dd>
         <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Order.ProductQuantity)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Order.ProductQuantity)
+        </dd>
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Order.customer)
         </dt>
         <dd class="col-sm-10">
