--- a/Y13TPIWebproject/Pages/Customers/Index.cshtml
+++ b/Y13TPIWebproject/Pages/Customers/Index.cshtml
@@ -14,6 +14,9 @@
     <thead>
         <tr>
             <th>
+                @Html.DisplayNameFor(model => model.Customer[0].CustomerID)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.Customer[0].FirstName)
             </th>
             <th>
@@ -43,6 +46,9 @@
     <tbody>
 @foreach (var item in Model.Customer) {
         <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.CustomerID)
+            </td>
             <td>
                 @Html.DisplayFor(modelItem => item.FirstName)
             </td>
