--- a/Y13TPIWebproject/Pages/Products/Index.cshtml
+++ b/Y13TPIWebproject/Pages/Products/Index.cshtml
@@ -14,6 +14,9 @@
     <thead>
         <tr>
             <th>
+                @Html.DisplayNameFor(model => model.Product[0].ProductID)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.Product[0].ProductName)
             </th>
             <th>
@@ -31,6 +34,9 @@
     <tbody>
 @foreach (var item in Model.Product) {
         <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.ProductID)
+            </td>
             <td>
                 @Html.DisplayFor(modelItem => item.ProductName)
             </td>
