--- a/Y13TPIWebproject/Pages/Stationary.cshtml
+++ b/Y13TPIWebproject/Pages/Stationary.cshtml
@@ -16,7 +16,7 @@
                                               <h1>Deli <br />Gel Pen</h1>
                                               <p class="graytext">$8.99</p>
                                               <p>12 pack, 9g product weight, 0.5mm tip, 400m writing length</p>
-                                              <p><button>Add to Cart</button></p>
+                                              <p><button>ProductID: 2</button></p>
                                             </div>
 
                                             <div class="pcard col-auto">
@@ -25,7 +25,7 @@
                                               <h1>M&G <br /> 2B Pencil<br /></h1>
                                               <p class="graytext">$19.99</p>
                                               <p>50 pack, 2B, Organic wood, hexagon shape, container</p>
-                                              <p><button>Add to Cart</button></p>
+                                              <p><button>ProductID: 3</button></p>
                                             </div>
                                      
                                             <div class="pcard col-auto">
@@ -33,7 +33,7 @@
                                               <h1>Auto Pencil Sharpener</h1>
                                               <p class="graytext">$39.99</p>
                                               <p>3 second sharpen, adjustable size, recharging, 3000 sharpens</p>
-                                              <p><button>Add to Cart</button></p>
+                                              <p><button>ProductID: 4</button></p>
                                             </div>
                                                
                                             <div class="pcard col-auto">
@@ -41,7 +41,7 @@
                                               <h1>Retractable Gel Pen</h1>
                                               <p class="graytext">$8.99</p>
                                               <p>12 pack, 0.5mm, 3 colours, retractable<br /><br /></p>
-                                              <p><button>Add to Cart</button></p>
+                                              <p><button>ProductID: 5</button></p>
                                             </div>
 
                                             <div class="pcard col-auto">
@@ -49,7 +49,7 @@
                                               <h1>A4 Clear Files<br />w/Button</h1>
                                               <p class="graytext">$9.99</p>
                                               <p>A4 size, multiple colours, button<br /><br /></p>
-                                              <p><button>Add to Cart</button></p>
+                                              <p><button>ProductID: 6</button></p>
                                             </div>
                                      
                                             <div class="pcard col-auto">
@@ -57,7 +57,7 @@
                                               <h1>Magnetic Notebook</h1>
                                               <p class="graytext">$4.99</p>
                                               <p>A5 size, 240 pages, magnetic strap, ruled lines</p>
-                                              <p><button>Add to Cart</button></p>
+                                              <p><button>ProductID: 7</button></p>
                                             </div>
                                             
                                             <div class="pcard col-auto">
@@ -65,7 +65,7 @@
                                               <h1>M&G <br /> Erasers</h1>
                                               <p class="graytext">$6.99 - $19.99</p>
                                               <p>4B/2B, variety of pattens, 8,16,32 etc packs</p>
-                                              <p><button>Add to Cart</button></p>
+                                              <p><button>ProductID: 8, 9</button></p>
                                             </div>
 
                                             <div class="pcard col-auto">
@@ -73,7 +73,7 @@
                                               <h1>Deli <br /> Glue Sticks</h1>
                                               <p class="graytext">$9.99</p>
                                               <p>12 pack,  21g/36g, PVA/PVP material<br /><br /></p>
-                                              <p><button>Add to Cart</button></p>
+                                              <p><button>ProductID: 10</button></p>
                                             </div>
                                      
                                      
